# hermpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  justfile  mag.py  mkdocs.yaml  plotting_tools.py  pyproject.toml  run_checks  time_series.py  zensical.toml
.github/workflows/: build-docs.yaml  docs.yml  linting-and-formatting.yaml  push-to-pypi.yaml  unit-tests.yml
docs/: about.md  conf.py  getting_started.rst  index.md  index.rst  installation.md  sg_execution_times.rst
docs/examples/: client-spice.md  index.md  multi-panel-plotting.md
docs/reference/: hermpy-data.md  hermpy-utils.md  index.rst  net.md  net.rst  plotting.md
docs/source/: conf.py  hermpy.data.rst  hermpy.net.rst  hermpy.plotting.rst  hermpy.rst  hermpy.utils.rst  importing.rst  index.rst  index_getting_started.rst  index_user_guide.rst  installation.rst  intro.rst  introduction.rst  modules.rst
docs/source/Boundaries/: index.rst
docs/source/Ephemeris/: index.rst
docs/source/FIPS/: index.rst
docs/source/MAG/: Load_Between_Dates.rst  index.rst
docs/source/Plotting/: index.rst
docs/source/Utils/: Download_MESSENGER_MAG.rst  User.rst  index.rst
docs/source/examples/: client-spice.rst  index.rst  multi-panel-plotting.rst
examples/: build_philpott_list.py  fips_example.py  grazing_angle__trajectory.py  loading_boundary_crossings.py  mag_example.py  mag_vector.py  multi_orbit_plot.py  multi_panel_mag_plot.py  trajectories_example.py  trajectory_mag_multiplot.py
examples/basic_instruments/: fips_example.py  mag_example.py
examples/multiplots/: mag_and_fips.py  multi_orbit_plot.py  multi_panel_mag_plot.py  trajectory_mag_multiplot.py
hermpy/: __init__.py  assumptions.txt  boundary_crossings.py  fips.py  mag.py  plotting_tools.py  trajectory.py  utils.py
hermpy/boundaries/: boundaries.py
hermpy/boundaries/tests/: test_loading.py
hermpy/fips/: __init__.py
hermpy/mag/: __init__.py  mag.py
hermpy/plotting/: plotting.py
hermpy/trajectory/: trajectory.py
hermpy/typing/: __init__.py
hermpy/utils/: __init__.py  utils.py
hermpy/utils/tests/: test_web.py
src/MercuryTools/: boundary_crossings.py  plotting_tools.py  trajectory.py
src/examples/: GALLERY_HEADER.rst  aberration.py  download_data.py  mercury-schematic.py  multipanel_plots.py  plot_one_orbit_of_messenger_mag.py  spice.py
src/hermean_toolbelt/: boundary_crossings.py  mag.py  plotting_tools.py  trajectory.py
src/hermian_toolbelt/: mag.py  plotting_tools.py  trajectory.py
src/hermpy/boundaries/: boundaries.py
src/hermpy/data/: __init__.py  data-containers.py  lists.py  timeseries.py
src/tests/: net.py  test_net.py
testing/: multi_orbit_plot.py  search_boundaries.py
(+18 files in other folders)
