[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hermpy"
description = "A collection of tools to aid in the creation of publication plots from spacecraft around Mercury."
authors = [
    { name="Daragh Hollman", email="dhollman@cp.dias.ie" },
    { name="Charles Bowers", email="cbowers@cp.dias.ie"},
    { name="Caitriona Jackman", email="cjackman@cp.dias.ie"},
    { name="Adam Healy"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "matplotlib",
    "ephem",
    "spiceypy",
    "pandas",
    "tqdm"
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/daraghhollman/HermPy"

[tool.setuptools.packages.find]

[tool.setuptools_scm]
write_to = "hermpy/version.py"
