[project]
name = "hermpy"
version = "0.0.3"
description = "A collection of tools to aid in the creation of publication plots from spacecraft around Mercury."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name="Daragh Hollman", email="daragh.hollman@dias.ie" },
    { name="Charles Bowers"},
    { name="Caitriona Jackman"},
    { name="Adam Healy"}
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.16.2",
    "spiceypy>=7.0.0",
    "tqdm>=4.67.1",
]

[project.urls]
homepage = "https://github.com/daraghhollman/hermpy"

[project.scripts]
hermpy = "hermpy:main"

[tool.ruff.lint]
ignore = ["E722", "F403", "F405"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
