[project]
name = "hermpy"
version = "0.2.4"
description = "Tools for space science at Mercury"
keywords = ["hermpy", "mercury", "space", "science", "messenger", "bepicolombo"]

authors = [
    {name = "Daragh M. Hollman", email = "daragh.hollman@dias.ie"}
]

readme = "README.md"
license = {file = "LICENSE"}

requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "drms>=0.9.0",
    "h5netcdf>=1.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "mpl-animators>=1.2.4",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "spiceypy>=8.0.0",
    "sunpy>=7.1.0",
    "xarray>=2025.12.0",
    "zeep>=4.3.2",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydata-sphinx-theme>=0.18.0",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinx-gallery>=0.21.0",
]
